<?xml version="1.0" encoding="utf-8"?>
<!--
  -->
  
<resources>

    <!-- ************** Application-wide Strings ************* -->
    <string name="app_name">Potlatch4u</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Potlatch4u</string>
    <string name="authority">org.coursera.potlatch4u.authority</string>

    <!-- ******************* Defined Colors ****************** -->
    <color name="cyan">#00ffff</color>
    <color name="gray">#808080</color>
    <color name="lightblue">#add8e6</color>

    <!-- **** Strings for View Fragment for each Relation **** -->
    
    <!-- gift View Fragment Strings -->
    <string name="gift_view_button_label_delete">Delete</string>
    <string name="gift_view_button_label_touched">I\'m touched!</string>
    <string name="gift_view_button_label_report">Inappropriate!</string>
    <string name="gift_view_deletion_dialog_title">Closing Activity</string>
    <string name="gift_view_deletion_dialog_message">Are you sure you want to Delete this Entry?</string>
    <string name="gift_view_deletion_dialog_yes">Yes</string>
    <string name="gift_view_deletion_dialog_no">No</string>

    
    <string name="gift_view_edittext_login_id_default_value">LoginId</string>
    <string name="gift_view_edittext_gift_id_default_value">GiftId</string>
    <string name="gift_view_edittext_title_default_value">Title</string>
    <string name="gift_view_edittext_body_default_value">Body</string>
    <string name="gift_view_edittext_audio_link_default_value">Play Audio</string>
    <string name="gift_view_edittext_video_link_default_value">VideoLink</string>
    <string name="gift_view_edittext_image_name_default_value">ImageName</string>
    <string name="gift_view_edittext_image_meta_data_default_value">ImageData</string>
    <string name="gift_view_edittext_tags_default_value">Tags</string>
    <string name="gift_view_edittext_creation_time_default_value">CreationTime</string>
    <string name="gift_view_edittext_gift_time_default_value">GiftTime</string>
    <string name="gift_view_edittext_latitude_default_value">Latitude</string>
    <string name="gift_view_edittext_longitude_default_value">Longitude</string>
    


    
    <string name="gift_view_label_login_id">LoginId</string>
    <string name="gift_view_label_gift_id">GiftId</string>
    <string name="gift_view_label_title">Title</string>
    <string name="gift_view_label_body">Description</string>
    <string name="gift_view_label_audio_link">Audio</string>
    <string name="gift_view_label_video_link">Video</string>
    <string name="gift_view_label_image_name">ImageName</string>
    <string name="gift_view_label_image_meta_data">ImageData</string>
    <string name="gift_view_label_tags">Tags</string>
    <string name="gift_view_label_creation_time">CreationTime</string>
    <string name="gift_view_label_gift_time">GiftTime</string>
    <string name="gift_view_label_latitude">Latitude</string>
    <string name="gift_view_label_longitude">Longitude</string>
    
    <!-- location View Fragment Strings -->
    <string name="tags_view_button_label_delete">Delete</string>
    <string name="tags_view_button_label_edit">Edit</string>
    <string name="tags_view_deletion_dialog_title">Closing Activity</string>
    <string name="tags_view_deletion_dialog_message">Are you sure you want to Delete this Entry?</string>
    <string name="tags_view_deletion_dialog_yes">Yes</string>
    <string name="tags_view_deletion_dialog_no">No</string>

    
    <string name="tags_view_edittext_login_id_default_value">LoginId</string>
    <string name="tags_view_edittext_gift_id_default_value">GiftId</string>
    <string name="tags_view_edittext_tag_default_value">Tag</string>
    
    <string name="gift_view_text_touched_count">This gift has not touched anybody yet.</string>
    <string name="gift_view_image_content_description">no photo taken yet</string>
    

    
    <string name="tags_view_label_login_id">LoginId</string>
    <string name="tags_view_label_gift_id">GiftId</string>
    <string name="tags_view_label_tag">Tag</string>
    
    


    <!-- **** Strings for List Fragment for each Relation **** -->
    
    <!-- gift List Fragment Strings -->
    <string name="gift_list_button_label_add">ADD</string>
    <string name="gift_list_filter_hint">Title Filter...</string>
    
    <!-- tags List Fragment Strings -->
    <string name="tags_list_button_label_add">ADD</string>
    <string name="tags_list_button_label_refresh">REFRESH</string>
    


    <!-- **** Strings for Create Fragment for each Relation **** -->
    
    <!-- gift Create Fragment Strings -->
    
    <string name="gift_create_label_title">Gift Name</string>
    <string name="gift_create_label_description">Description</string>
    <string name="gift_create_label_image_name">imageName:</string>
    <string name="gift_create_label_image_meta_data">imageMetaData:</string>
    <string name="gift_create_label_creation_time">creationTime:</string>
    <string name="gift_create_label_gift_time">giftTime:</string>
    


    
    <string name="gift_create_title_default_value"></string>
    <string name="gift_create_body_default_value"></string>
    <string name="gift_create_audio_link_default_value"></string>
    <string name="gift_create_video_link_default_value"></string>
    <string name="gift_create_image_name_default_value"></string>
    <string name="gift_create_image_meta_data_default_value"></string>
    <string name="gift_create_tags_default_value"></string>
    <string name="gift_create_creation_time_default_value">0</string>
    <string name="gift_create_gift_time_default_value">0</string>
    

    <string name="gift_create_button_label_clear">Clear</string>
    <string name="gift_create_button_label_cancel">Cancel</string>
    <string name="gift_create_button_label_create">Create</string>
    <string name="gift_create_button_message_save">Save</string>
    <string name="gift_create_button_message_reset">Reset</string>
    <string name="gift_create_button_message_cancel">Cancel</string>
    <!-- tags Create Fragment Strings -->
    
    <string name="tags_create_label_login_id">loginId:</string>
    <string name="tags_create_label_gift_id">giftId:</string>
    <string name="tags_create_label_tag">tag:</string>
    


    
    <string name="tags_create_login_id_default_value">0</string>
    <string name="tags_create_gift_id_default_value">0</string>
    <string name="tags_create_tag_default_value"></string>
    

    <string name="tags_create_button_label_clear">Clear</string>
    <string name="tags_create_button_label_cancel">Cancel</string>
    <string name="tags_create_button_label_create">Create</string>
    <string name="tags_create_button_message_save">Save</string>
    <string name="tags_create_button_message_reset">Reset</string>
    <string name="tags_create_button_message_cancel">Cancel</string>
    


    <!-- **** Strings for Edit Fragment for each Relation **** -->
    
    <!-- gift Edit Fragment Strings : Labels -->
    
    <string name="gift_edit_label_login_id">LoginId</string>
    <string name="gift_edit_label_gift_id">GiftId</string>
    <string name="gift_edit_label_title">Title</string>
    <string name="gift_edit_label_body">Body</string>
    <string name="gift_edit_label_audio_link">AudioLink</string>
    <string name="gift_edit_label_video_link">VideoLink</string>
    <string name="gift_edit_label_image_name">ImageName</string>
    <string name="gift_edit_label_image_meta_data">ImageMetaData</string>
    <string name="gift_edit_label_tags">Tags</string>
    <string name="gift_edit_label_creation_time">CreationTime</string>
    <string name="gift_edit_label_gift_time">GiftTime</string>
    <string name="gift_edit_label_latitude">Latitude</string>
    <string name="gift_edit_label_longitude">Longitude</string>
    


    <!-- gift View Fragment Strings : Default Values -->
    
    <string name="gift_edit_default_value_login_id"></string>
    <string name="gift_edit_default_value_gift_id"></string>
    <string name="gift_edit_default_value_title"></string>
    <string name="gift_edit_default_value_body"></string>
    <string name="gift_edit_default_value_audio_link"></string>
    <string name="gift_edit_default_value_video_link"></string>
    <string name="gift_edit_default_value_image_name"></string>
    <string name="gift_edit_default_value_image_meta_data"></string>
    <string name="gift_edit_default_value_tags"></string>
    <string name="gift_edit_default_value_creation_time"></string>
    <string name="gift_edit_default_value_gift_time"></string>
    <string name="gift_edit_default_value_latitude"></string>
    <string name="gift_edit_default_value_longitude"></string>
    


    <!-- gift Edit Fragment Strings : Buttons -->
    <string name="gift_edit_button_message_save">Save</string>
    <string name="gift_edit_button_message_reset">Reset</string>
    <string name="gift_edit_button_message_cancel">Cancel</string>

    <!-- tags Edit Fragment Strings : Labels -->
    
    <string name="tags_edit_label_login_id">LoginId</string>
    <string name="tags_edit_label_gift_id">GiftId</string>
    <string name="tags_edit_label_tag">Tag</string>
    


    <!-- tags View Fragment Strings : Default Values -->
    
    <string name="tags_edit_default_value_login_id"></string>
    <string name="tags_edit_default_value_gift_id"></string>
    <string name="tags_edit_default_value_tag"></string>
    


    <!-- tags Edit Fragment Strings : Buttons -->
    <string name="tags_edit_button_message_save">Save</string>
    <string name="tags_edit_button_message_reset">Reset</string>
    <string name="tags_edit_button_message_cancel">Cancel</string>

    
    <!-- User Settings -->
    <string name="pref_name_touch_count_update_interval">Update Interval</string>

    <string name="pref_name_show_bad_gifts">Show gifts marked as inappropriate?</string>
    <string name="pref_summary_show_bad_gifts_on">Inappropriate gifts are shown.</string>
    <string name="pref_summary_show_bad_gifts_off">Inappropriate gifts are hidden.</string>
    <string name="pref_key_show_bad_gifts">pref_key_show_bad_gifts</string>
    <string name="pref_key_touch_count_update_interval">pref_touch_count_update_interval</string>
    <string name="pref_summary_touch_count_update_interval">Period between updates of touched-counts</string>
    

    <!-- ******** Sycn Adaptor Account Login Strings *********** -->
    <string name="ACCOUNT_TYPE">org.coursera.potlatch4u.authority</string>
    <string name="server">Server Address::</string>
    <string name="username">Username:</string>
    <string name="username_hint">username Hint!</string>
    <string name="password">Password:</string>
    <string name="password_hint">password Hint!</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_succeeded">Logged in.</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="record_button_label">Record</string>
    <string name="title_activity_sound_record">SoundRecordActivity</string>
    <string name="btn_add_photo">Add Photo</string>
    <string name="gift_create_default_touch_count">O</string>
    <string name="button_create_gift">Add</string>
    <string name="button_gifts_and_chains">Gifts</string>
    <string name="button_settings">Settings</string>
    <string name="button_top_gifts">Top Gifts</string>
    <string name="gift_photo_default">Gift photo</string>
        
</resources> 
